--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,43 @@ html,
   height: 100%;
   margin: 0;
 }
+
+@layer base {
+  .module-object {
+    rx: 4px;
+    ry: 4px;
+    @apply svg-shadow;
+  }
+}
+
+@layer utilities {
+  .svg-shadow {
+    filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.1))
+      drop-shadow(0 1px 2px rgba(0, 0, 0, 0.06));
+  }
+
+  .fill-opacity-50 {
+    fill-opacity: 0.5;
+  }
+
+  .stroke-opacity-50 {
+    stroke-opacity: 0.5;
+  }
+
+  .stroke-dash-even {
+    stroke-dasharray: 5 5;
+  }
+
+  .stroke-0 {
+    stroke-width: 0;
+  }
+  .stroke-1 {
+    stroke-width: 1px;
+  }
+  .stroke-2 {
+    stroke-width: 2px;
+  }
+  .stroke-4 {
+    stroke-width: 4px;
+  }
+}
