--- a/src/canvas/_/EntityObject.module.css
+++ b/src/canvas/_/EntityObject.module.css
@@ -13,8 +13,8 @@
 
 .root.rootDisabled .rect {
   /* stroke: #f0f; */
-  opacity: 0.5;
-  fill: rgba(0, 0, 0, 0.3);
+  /* opacity: 0.5; */
+  /* fill: rgba(0, 0, 0, 0.3); */
 }
 
 .rootDisabled {
