--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,39 @@ html,
 }
 
 @layer base {
+  .button--base {
+    @apply bg-black;
+    @apply hover:bg-purple-600 hover:shadow-md;
+    @apply focus:bg-purple-500;
+  }
+
+  select {
+    @apply block w-full;
+    @apply rounded-md;
+    @apply shadow-md;
+
+    @apply border-2 border-pink-500;
+
+    /* Focus-related */
+    @apply ring-purple-500;
+    @apply focus:ring-2;
+    @apply focus:outline-none;
+    @apply focus:ring-offset-white ring-offset-2;
+  }
+
+  .input--base {
+    @apply block w-full;
+    @apply px-4 py-2;
+    @apply rounded-md;
+    @apply border-2 border-opacity-30;
+
+    @apply focus:border-pink-500;
+    @apply focus:ring-2 ring-purple-500;
+    @apply focus:ring-offset-white ring-offset-2;
+    @apply focus:outline-none;
+    @apply focus:shadow-lg;
+  }
+
   .module-object {
     rx: 4px;
     ry: 4px;
@@ -30,6 +63,29 @@ html,
 }
 
 @layer utilities {
+  .focusable-base {
+    @apply focus:border-pink-500;
+    @apply focus:ring-2 ring-purple-500;
+    @apply focus:ring-offset-white ring-offset-2;
+    @apply focus:outline-none;
+  }
+
+  .focusable {
+    @apply block w-full;
+    @apply px-4 py-2;
+    @apply rounded-md;
+    @apply border-2 border-opacity-30;
+
+    @apply focus:border-pink-500;
+    @apply focus:ring-2 ring-purple-500;
+    @apply focus:ring-offset-white ring-offset-2;
+    @apply focus:outline-none;
+
+    /* Shadows */
+    @apply hover:shadow-md;
+    @apply focus:shadow-lg;
+  }
+
   .svg-shadow {
     filter: drop-shadow(0 1px 3px rgba(0, 0, 0, 0.1))
       drop-shadow(0 1px 2px rgba(0, 0, 0, 0.06));
