feat: add disabled Button state

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -11,6 +11,12 @@
   @apply border-2 border-transparent focus:border-pink-500;
 }
 
+.button:disabled {
+  @apply opacity-50;
+  @apply hover:bg-black hover:shadow-none;
+  @apply cursor-not-allowed;
+}
+
 .button.button--with-icon {
   @apply pl-10;
 }
