--- a/src/components/Marker/Marker.css
+++ b/src/components/Marker/Marker.css
@@ -1,2 +1,10 @@
 .marker {
 }
+
+.marker .marker__match-highlight {
+  @apply inline-block px-1;
+  @apply shadow-md;
+  @apply bg-pink-500;
+  @apply text-white;
+  @apply rounded-md;
+}
