--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -1,10 +1,35 @@
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  /* font-size: 24px; Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 .icon {
-  @apply w-6 h-6;
+  /* @apply w-6 h-6; */
 }
 
 .icon,
 .icon__el {
-  @apply w-6 h-6;
+  /* @apply w-6 h-6; */
 }
 
 .icon--ui {
@@ -13,4 +38,7 @@
 
 .icon__el {
   /* @apply border border-blue-500; */
+}
+
+.icon .material-icons {
 }
