feat(styles): style util additions

--- a/src/styles/base/_definitions.scss
+++ b/src/styles/base/_definitions.scss
@@ -1,3 +1,8 @@
+$font-family: (
+  'sans-serif': "'Apercu Pro', sans-serif",
+  'mono': "'Jetbrains Mono', 'Victor Mono', monospace",
+) !default;
+
 $font-size: (
   '01': 0.75rem,
   '02': 0.875rem,
