--- a/src/styles/components/_canvas.scss
+++ b/src/styles/components/_canvas.scss
@@ -1,3 +1,5 @@
+@import '../util/position';
+
 $canvas-card-border-color: rgba(#000, 1);
 $canvas-card-border-width: 2px;
 $canvas-card-bg: rgba(#fff, 1);
@@ -8,6 +10,7 @@ $canvas-card-radius: $radius-md;
   height: 100%;
   position: relative;
   user-select: none;
+  z-index: $canvas-main-z;
 }
 
 .canvas__card {
@@ -39,6 +42,26 @@ $canvas-card-radius: $radius-md;
 
 //
 
+// Canvas underlay
+
+.canvas-underlay {
+  // border: solid 2px #f00;
+  z-index: $canvas-underlay-z;
+  opacity: 0.5;
+  @include position(absolute);
+  @include inset;
+}
+
+// Canvas overlay
+.canvas-overlay {
+  // border: dotted 2px #fff;
+  pointer-events: none;
+  z-index: $canvas-overlay-z;
+  opacity: 0.5;
+  @include position(absolute);
+  @include inset;
+}
+
 // Canvas card controls
 .canvas__card-controls {
   display: none;
@@ -68,18 +91,20 @@ $canvas-card-radius: $radius-md;
 
 //
 
-.toolbar {
+.module-palette {
   border: solid 2px #f00;
   padding: map-get($spacing, '02');
   width: 15rem;
   max-height: 50vh;
 }
 
-.toolbar__items {
+.module-palette__items {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  grid-gap: 0.25rem;
 }
 
-.toolbar__items > * {
+.module-palette__items > * {
   border: solid 2px #f00;
+  padding: map-get($spacing, '02');
 }
