--- a/src/styles/util/_text.scss
+++ b/src/styles/util/_text.scss
@@ -1,7 +1,15 @@
+@use "sass:string";
+
 @import '../base/definitions';
 
 @each $name, $size in $font-size {
   .text-#{$name} {
     font-size: $size;
+  }
+}
+
+@each $family, $value in $font-family {
+  .font-#{$family} {
+    font-family: unquote($value);
   }
 }
