--- a/src/styles/base/_elements.scss
+++ b/src/styles/base/_elements.scss
@@ -3,8 +3,18 @@ pre {
 }
 
 ul,
-ol {
+ol,
+dl {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+// @shame
+
+dl {
+  &.pairs {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+  }
 }
