feat(styles): style it like a blueprint

--- a/src/styles/base/_definitions.scss
+++ b/src/styles/base/_definitions.scss
@@ -3,6 +3,12 @@ $font-family: (
   'mono': "'Jetbrains Mono', 'Victor Mono', monospace",
 ) !default;
 
+$font-weight: (
+  'light': 300,
+  'regular': 500,
+  'bold': 700,
+) !default;
+
 $font-size: (
   '01': 0.75rem,
   '02': 0.875rem,
@@ -38,4 +44,4 @@ $spacing: (
   '11': 5rem,
   '12': 6rem,
   '13': 10rem,
-);
+) !default;
