--- a/src/styles/components/_canvas.scss
+++ b/src/styles/components/_canvas.scss
@@ -1,7 +1,7 @@
 @import '../util/position';
 
 $canvas-card-border-color: rgba(#000, 1);
-$canvas-card-border-width: 2px;
+$canvas-card-border-width: 1px;
 $canvas-card-bg: rgba(#fff, 1);
 $canvas-card-radius: $radius-md;
 
@@ -14,12 +14,14 @@ $canvas-card-radius: $radius-md;
 }
 
 .canvas__card {
+  // pointer-events: none;
   position: absolute;
   left: 0;
   top: 0;
-  border: solid $canvas-card-border-width $canvas-card-border-color;
-  background-color: $canvas-card-bg;
+  border: $card-border-style $card-border-width $card-border-color;
+  background-color: $card-bg-color;
   border-radius: $canvas-card-radius;
+  z-index: $canvas-main-z + 1;
 }
 
 .canvas__card:hover .canvas__card-controls {
@@ -35,8 +37,10 @@ $canvas-card-radius: $radius-md;
   top: 0;
   pointer-events: none;
 
-  border: dotted 2px #00f;
-  background-color: rgba(#fff, 0.5);
+  // border: dotted 2px #00f;
+  border: dotted 2px $base-border-color;
+  border-radius: $canvas-card-radius;
+  background-color: rgba($card-bg-color, 0.7);
   z-index: $canvas-ghost-z;
 }
 
@@ -47,9 +51,12 @@ $canvas-card-radius: $radius-md;
 .canvas-underlay {
   // border: solid 2px #f00;
   z-index: $canvas-underlay-z;
-  opacity: 0.5;
+  // opacity: 0;
+  // background: #f00;
+  pointer-events: none;
   @include position(absolute);
   @include inset;
+  // border: solid 2px #f0f;
 }
 
 // Canvas overlay
@@ -108,4 +115,13 @@ $canvas-card-radius: $radius-md;
 .module-palette__items > * {
   border: solid 2px #f00;
   padding: map-get($spacing, '02');
+}
+
+//
+
+.canvas-debug {
+  display: none;
+  border: solid 2px $base-border-color;
+  @include padding('03');
+  @include margin('03');
 }
