feat(styles): YES

--- a/src/styles/base/_elements.scss
+++ b/src/styles/base/_elements.scss
@@ -58,6 +58,14 @@ input[type='checkbox'] {
     justify-content: center;
   }
 
+  &:disabled {
+    &,
+    & + label {
+      opacity: 0.5;
+      cursor: not-allowed;
+    }
+  }
+
   &:checked {
     // background: $blueprint-blue-light;
 
