--- a/src/styles/components/_info.scss
+++ b/src/styles/components/_info.scss
@@ -17,7 +17,7 @@ $info-label-font-size: 0.8rem;
   right: 1rem;
   bottom: 1rem;
   // border: $info-block-border;
-  width: 24rem;
+  min-width: 24rem;
 
   &__child {
     border-top: $info-block-border;
@@ -52,7 +52,7 @@ $info-label-font-size: 0.8rem;
 .info__header {
   @include border;
   border-bottom: none;
-  padding: $info-block-pad;
+  padding: $info-block-pad * 2 $info-block-pad;
   font-size: 2rem;
 
   sub {
