--- a/src/styles/components/__index.scss
+++ b/src/styles/components/__index.scss
@@ -1,5 +1,7 @@
-@import 'ui/_index';
 @import 'canvas';
+@import 'canvas-el';
 @import 'entity';
 @import 'entity-palette';
 @import 'info';
+@import 'ui/_index';
+@import 'canvas/_index';
