--- a/src/styles/base/_definitions.scss
+++ b/src/styles/base/_definitions.scss
@@ -1,3 +1,10 @@
+$z-index: (
+  'modal': 21,
+  'overlay': 11,
+  'base': 5,
+  'underlay': 1,
+) !default;
+
 $font-family: (
   'sans-serif': "'Apercu Pro', sans-serif",
   'mono': "'Jetbrains Mono', 'Victor Mono', monospace",
