feat(style): migrate styles, improve

--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -11,7 +11,7 @@ $font-family-mono-secondary: 'CMU Typewriter Text' !default;
 
 $radius-md: 0.5rem !default;
 
-$body-offset: 20px !default;
+$body-offset: 20px - 1px !default;
 
 $canvas-underlay-z: 1 !default;
 $canvas-main-z: 5 !default;
