--- a/src/styles/base/_page.scss
+++ b/src/styles/base/_page.scss
@@ -1,4 +1,11 @@
+@use 'sass:color';
+
 body {
-  background: $main-bg-color;
+  background: $main-bg-color
+    radial-gradient(
+      circle,
+      $main-bg-color,
+      color.adjust($main-bg-color, $lightness: -10%, $alpha: 0.5)
+    );
   color: $main-text-color;
 }
