--- a/src/styles/components/__index.scss
+++ b/src/styles/components/__index.scss
@@ -4,5 +4,7 @@
 @import 'entity-palette';
 @import 'info';
 @import 'menu';
+@import 'menu-toggle';
+@import 'info-panel';
 @import 'ui/_index';
 @import 'canvas/_index';
