--- a/src/styles/util/_position.scss
+++ b/src/styles/util/_position.scss
@@ -82,3 +82,11 @@ $presets: (
 .top-right {
   @include make-top-right;
 }
+
+.off-canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1px;
+  height: 1px;
+}
