--- a/src/styles/components/_info-panel.scss
+++ b/src/styles/components/_info-panel.scss
@@ -38,10 +38,13 @@
     }
 
     dl {
+      .row {
+        display: grid;
+        grid-template-columns: auto 2rem;
+      }
+
       width: 10rem;
       // border: solid 1px #fff;
-      display: grid;
-      grid-template-columns: auto 2rem;
 
       dt,
       dd {
