feat(canvas): support deletion, add missing translations

--- a/src/styles/components/_entity.scss
+++ b/src/styles/components/_entity.scss
@@ -1,3 +1,5 @@
+@use '../util/_index' as U;
+
 @mixin make-entity-style($prefix) {
   $p: unquote($prefix);
 
@@ -46,6 +48,11 @@
     left: 0.5rem;
     top: 0.5rem;
     font-size: map-get($font-size, '01');
+  }
+
+  .#{$p}__controls {
+    @include U.position(absolute, bottom-right);
+    pointer-events: all;
   }
 }
 
